--- a/src/styles/_mobile.scss
+++ b/src/styles/_mobile.scss
@@ -6,48 +6,22 @@ body {
         // height: 100%;
         // width: auto;
         // overflow: hidden;
-      
-        img {
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
-        }
     }
     .feather {
         stroke-width: 1;
         fill: black;
         color: variables.$white;
     }
-}
-
-
-
-.my-name {
-    color: variables.$lion;
-}
-
-header {
-    background-image: url("/src/images/hero_image.jpg");
-    height: 100%;
-    padding: 15%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 971px 971px;
-    position: relative;
-
-    .intro-container {
-        padding: 35px 17px;
-        background-color: variables.$white;
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
-    
-    h1 {
+    h2 {
         margin: 0;
-        font-size: 1.5rem;
-    }
-
-    p {
-        font-family: variables.$secondary-font;
-        padding-top: 10px;
+        padding-top: 40px;
+        font-size: 5rem;
+        text-align: center;
     }
     nav {
         display: flex;
@@ -57,10 +31,57 @@ header {
     }
 }
 
+.circle-container {
+    border-radius: 50%;
+    border: 2px solid white;
+    width: 30vw;
+    height: 30vw;
+    overflow: hidden;
+    margin: 10px;
+}
+
+.my-name {
+    color: variables.$lion;
+}
+
+header {
+    background-image: url("/src/images/hero_image.jpg");
+    height: 100%;
+    padding: 10% 10% 25%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 971px 971px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .intro-container {
+        padding: 35px 17px;
+        background-color: variables.$white;
+    }
+    
+    h1 {
+        margin: 0;
+        padding-left: 5px;
+        font-size: 1.5rem;
+    }
+
+    p {
+        font-family: variables.$secondary-font;
+        padding-top: 10px;
+    }
+   
+}
+
 .tech-container {
     background-color: variables.$hookers-green;
-    h2 {
-        margin: 0;
+    
+    p {
+        font-family: variables.$secondary-font;
+        font-size: 1.3rem;
+        font-weight: 400;
+        padding: 30px 20px 100px;
     }
 }
 
@@ -72,4 +93,43 @@ main {
 
 .skills-container {
     background-color: variables.$beaver;
+    text-align: center;
+    padding: 50px 20px 90px;
+    h3 {
+        font-size: 1.5rem;
+    }
+    ul {
+        padding: 0;
+    }
+    li {
+        list-style: none;
+        font-size: 1.3rem;
+        font-family: variables.$secondary-font;
+        line-height: 2rem;
+    }
+}
+
+footer {
+    margin: 25px 0 80px;
+    h2 {
+        font-size: 3.6rem;
+        color: variables.$hookers-green;
+    }
+   .img-container {
+    display: flex;
+    justify-content: center;
+   }
+    span {
+        font-size: 2rem;
+    }
+    .contact-info-container {
+        padding-left: 20px;
+
+        p {
+            font-weight: bold;
+        }
+    }
+    .contact-details {
+        margin: 40px 0;
+    }
 }
