--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,12 +1,13 @@
-$platinum: #E2DFDDff;
-$hunter-green: #375946ff;
-$beaver: #988671ff;
-$hookers-green: #6B8A7Eff;
-$bole: #823F38ff;
-$lion: #A6895Aff;
 $white: #ffffff;
 $black: #000000;
 
+$reseda-green: #688b58ff;
+$gamboge: #f1a208ff;
+$charcoal: #264653ff;
+$seasalt: #fafafaff;
+$eerie-black: #1a1a1aff;
+$periwinkle: #bdb2ffff;
 
-$primary-font: "Bakback One", sans-serif;
-$secondary-font: "EB Garamond", serif; 
+
+$primary-font: "Work Sans", sans-serif;
+$secondary-font: "Playfair Display", serif; 
