--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,3 +11,4 @@ $periwinkle: #bdb2ffff;
 
 $primary-font: "Work Sans", sans-serif;
 $secondary-font: "Playfair Display", serif; 
+$detail-font: "Abril Fatface", serif; 
