--- a/src/styles/_mobile.scss
+++ b/src/styles/_mobile.scss
@@ -1,13 +1,9 @@
 @use 'variables';
-
 body {
     font-family: variables.$primary-font;
+    font-size: 1.4rem;
     background-color: variables.$seasalt;
-    .img-container {
-        // height: 100%;
-        // width: auto;
-        // overflow: hidden;
-    }
+
     .feather {
         stroke-width: 1;
         fill: black;
@@ -32,47 +28,45 @@ body {
     }
 }
 
-.circle-container {
-    border-radius: 50%;
-    border: 2px solid white;
-    width: 30vw;
-    height: 30vw;
-    overflow: hidden;
-    margin: 10px;
-}
-
 .my-name {
     color: variables.$gamboge;
+    font-size: 1.75rem;
+}
+.profile {
+    padding: 2rem;
+    display: flex;
+    justify-content: center;
 }
 
-header {
-    background-image: url("");
-    height: 100%;
-    padding: 10% 10% 25%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 971px 971px;
-    position: relative;
+.profile-card {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
 
-    .intro-container {
-        padding: 35px 17px;
-        background-color: variables.$white;
-    }
-    
-    h1 {
-        margin: 0;
-        padding-left: 5px;
-        font-size: 1.5rem;
-    }
+.profile-img {
+    margin-top: 1.6rem;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    object-fit: cover;
+}
 
-    p {
-        font-family: variables.$secondary-font;
-        padding-top: 10px;
-    }
-   
+.profile-info {
+    margin-top: 1rem;
+    text-align: center;
+    background: variables.$seasalt;
+    border-radius: 1rem;
+    padding: 1rem;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+}
+header {
+    background-image: url("/src/images/background_img.png");
+    height: 100%;
+    padding: 7% 7% 20%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .tech-container {
@@ -89,7 +83,56 @@ header {
 main {
     h2 {
         color: variables.$gamboge;
+        padding-bottom: 20px;
     }
+}
+
+.project-card {
+    margin-top: 1rem;
+    padding-bottom: 25px;
+    .content-container {
+        padding-inline: 15px;
+    }
+    h3 {
+        font-size: 1.8rem;
+        margin-block: 1.5rem;
+    }
+
+    p {
+        font-family: variables.$secondary-font;
+    }
+
+    ul {
+        display: flex;
+        flex-wrap: wrap;
+        padding: 0;
+        gap: 5px;
+    }
+    li {
+        font-family: variables.$detail-font;
+        list-style: none;
+        padding: 5px;
+        background-color: variables.$reseda-green;
+        color: variables.$seasalt;
+    }
+
+    .buttons {
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+        button {
+        border: 4px solid variables.$gamboge;
+        border-radius: 19px;
+        padding-block: 10px;
+        padding-inline: 2rem;
+        background-color: variables.$seasalt;
+        font-weight: 700;
+        text-transform: uppercase;
+        cursor: pointer;
+    }
+    }
+
+    
 }
 
 .skills-container {
@@ -124,7 +167,7 @@ footer {
         font-size: 2rem;
     }
     .contact-info-container {
-        padding-left: 20px;
+        padding-inline: 20px;
 
         p {
             font-weight: bold;
@@ -132,5 +175,8 @@ footer {
     }
     .contact-details {
         margin: 40px 0;
+        p {
+            overflow-wrap: break-word;
+        }
     }
 }
