add styling for tablet

--- a/src/styles/_tablet.scss
+++ b/src/styles/_tablet.scss
@@ -67,3 +67,28 @@ header {
  .buttons {
     flex-direction: row;
  }
+
+ // -------------------------------------------------------------
+ // --------------------------- Tech ----------------------------
+ // -------------------------------------------------------------
+
+ .tech-container {
+  text-align: center;
+ }
+
+
+ // -------------------------------------------------------------
+ // ---------------------- Project cards ------------------------
+ // -------------------------------------------------------------
+
+.project-card {
+  display: flex;
+
+  .img-container {
+    max-width: 35%;
+  }
+  .buttons {
+    flex-direction: row;
+    gap: 1.3rem;
+  }
+}
