--- a/src/styles/_tablet.scss
+++ b/src/styles/_tablet.scss
@@ -68,18 +68,18 @@ header {
     flex-direction: row;
  }
 
- // -------------------------------------------------------------
- // --------------------------- Tech ----------------------------
- // -------------------------------------------------------------
+// -------------------------------------------------------------
+// --------------------------- Tech ----------------------------
+// -------------------------------------------------------------
 
- .tech-container {
+.tech-container {
   text-align: center;
- }
+}
 
 
- // -------------------------------------------------------------
- // ---------------------- Project cards ------------------------
- // -------------------------------------------------------------
+// -------------------------------------------------------------
+// ---------------------- Project cards ------------------------
+// -------------------------------------------------------------
 
 .project-card {
   display: flex;
@@ -90,5 +90,22 @@ header {
   .buttons {
     flex-direction: row;
     gap: 1.3rem;
+  }
+}
+
+// -------------------------------------------------------------
+// ---------------------- Project cards ------------------------
+// -------------------------------------------------------------
+
+.skills-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr); 
+  gap: 2rem; 
+  padding-inline: 30vw;
+  text-align: center;
+
+  h2 {
+    grid-column: 1 / -1; 
+    text-align: center;  
   }
 }
