--- a/src/styles/_desktop.scss
+++ b/src/styles/_desktop.scss
@@ -14,3 +14,16 @@
     }
 
 }
+
+
+.skills-container {
+  grid-template-columns: repeat(4, 1fr); 
+  gap: 3rem; 
+  padding-inline: 20vw;
+  text-align: left;
+
+  h2 {
+    grid-column: 1 / -1; 
+    text-align: center;  
+  }
+}
