--- a/src/styles/_mobile.scss
+++ b/src/styles/_mobile.scss
@@ -154,7 +154,8 @@ main {
 }
 
 footer {
-    margin: 25px 0 80px;
+    margin: 25px 1rem 80px;
+    text-align: center;
     h2 {
         font-size: 3.6rem;
         color: variables.$gamboge;
@@ -175,6 +176,7 @@ footer {
     }
     .contact-details {
         margin: 40px 0;
+        font-weight: bold;
         p {
             overflow-wrap: break-word;
         }
