--- a/src/styles/_tablet.scss
+++ b/src/styles/_tablet.scss
@@ -1,5 +1,13 @@
 @use 'variables';
 
+h2 {
+  font-size: 5rem;
+}
+
+// -------------------------------------------------------------
+// --------------------------- Header --------------------------
+// -------------------------------------------------------------
+
 header {
     padding-inline: 10%;
 }
@@ -109,3 +117,58 @@ header {
     text-align: center;  
   }
 }
+
+
+footer {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 4;
+  gap: 1rem;
+  align-items: center;
+  text-align: left;
+  padding: 2rem;
+
+  h2 {
+    grid-column: 1 / -1;
+    font-size: 5rem;
+  }
+
+  .img-container {
+    grid-column: 1;
+    grid-row: 2;
+    display: flex;
+    justify-content: end;
+
+    img {
+      margin: 0;
+      width: 200px;
+      height: 200px;
+    }
+  }
+
+  h3 {
+    grid-column: 2 / span 2;
+    grid-row: 2;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .contact-details {
+    grid-column: 1 / -1;
+    grid-row: 3 / 4;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+    gap: 1rem;
+
+    p {
+      margin: 0;
+    }
+  }
+
+  nav {
+    grid-column: 1 / -1;
+  }
+}
+
