--- a/src/styles/_desktop.scss
+++ b/src/styles/_desktop.scss
@@ -1,3 +1,14 @@
+.profile-card {
+    grid-template-columns: repeat(6, auto); 
+    .img-container {
+        grid-column: 2;
+    }
+    h1 {
+        grid-column: 3 / span 3;
+    }
+}
+
+
 .projects-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -30,14 +41,16 @@
 
 
 footer {
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(4, auto); 
 
+    
     .img-container{
-        grid-column: 2;
-        padding-right: 1.7rem;
+        grid-column: 1 / span 2;
+        // padding-right: 1.7rem;
     }
 
     h3 {
         grid-column: 3 / span 2;
+        padding-left: 1rem;
     }
 }
