--- a/src/styles/_tablet.scss
+++ b/src/styles/_tablet.scss
@@ -17,7 +17,7 @@ header {
 
 .profile-card {
     display: grid;
-    grid-template-columns: auto 1fr; 
+    grid-template-columns: repeat(3, auto); 
     grid-template-rows: auto auto;  
     gap: 1rem;
     align-items: center;
@@ -28,11 +28,11 @@ header {
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   }
 
-  .profile-img {
+  .img-container {
     grid-column: 1;
     grid-row: 1 / 2;
-    margin-bottom: 0;
-    margin-left: 2rem;
+    display: flex;
+    justify-content: end;
   }
 
   .profile-info {
@@ -41,13 +41,12 @@ header {
     padding: 0;
     box-shadow: none;
     display: contents;
+    text-align: left;
 
     h1 {
-        grid-column: 2;
-        grid-row: 1;
-        display: flex;
-        flex-direction: column;
-    
+      grid-column: 2 / span 2;
+      grid-row: 1;
+      align-items: start;
     }
 
   }
@@ -55,6 +54,7 @@ header {
   .bio {
     grid-column: 1 / -1;
     grid-row: 2;
+    text-align: center;
   }
 
   .social-icons {
