--- a/src/styles/_tablet.scss
+++ b/src/styles/_tablet.scss
@@ -82,7 +82,12 @@ header {
 
 .tech-container {
   text-align: center;
+
+  ul {
+    justify-content: center;
+  }
 }
+
 
 
 // -------------------------------------------------------------
