--- a/src/styles/_mobile.scss
+++ b/src/styles/_mobile.scss
@@ -66,7 +66,7 @@ body {
     }
 }
 header {
-    background-image: url("/src/images/background_img.png");
+    background-image: url("../public/images/background_img.png");
     height: 100%;
     padding: 7% 7% 20%;
     background-position: center;
